<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/login_page"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:labelFor="@id/tieEmailInput"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail_id"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:labelFor="@id/tiePasswordInput"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_button"
            android:contentDescription="@string/if_you_have_filled_your_credentials_correctly_click_this_button_to_login"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/if_you_do_not_have_an_account_please_register_here"
            android:layout_gravity="end"
            android:text="@string/register_now" />

    </LinearLayout>

</LinearLayout>