<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.sew.accessibility_application.activities.HomeActivity">

    <RelativeLayout
        android:id="@+id/my_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/you_are_on_the_home_screen"
            android:gravity="center"
            android:text="@string/home_screen"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/left_icon" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/twotone_account_circle_24"
        android:scaleType="fitCenter"
        android:id="@+id/imgProfilePhoto"
        android:contentDescription="@string/this_is_your_profile_picture"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/tvFullNameLabel"
            android:textSize="20sp"
            android:importantForAccessibility="no"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:id="@+id/tvFullName"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:id="@+id/tvEmailLabel"
            android:textSize="20sp"
            android:importantForAccessibility="no"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>
