<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.sew.accessibility_application.activities.RegistrationActivity">

    <RelativeLayout
        android:id="@+id/my_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/you_are_on_the_registration_page_enter_your_details_below"
            android:gravity="center"
            android:text="@string/registration_page"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/left_icon" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameLabel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:labelFor="@id/tieNameInput"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:labelFor="@id/tieEmailInput"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail_id"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:labelFor="@id/tiePasswordInput"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:accessibilityLiveRegion="polite"
            android:gravity="center"
            android:labelFor="@id/tieConfirmPasswordInput"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieConfirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegisterNow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_button"
            android:contentDescription="@string/if_you_have_filled_all_the_details_click_here_to_register_yourself"
            android:text="@string/register_now"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>
